# jibo-teleop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
launch/: rosbag_record.sh  runFSM.sh  startROS.sh  start_gfta_collection.sh
launch_scripts/: copy_recordings.sh  copy_rosbag.sh  mvg  rosbag_record.sh  start_gfta_collection.sh
msg/: JiboAction.msg  JiboAsrCommand.msg  JiboAsrResult.msg  JiboState.msg  JiboVec3.msg
recordings/: README.txt
scripts/: narrative_script.json  siw_script.json
src/: AudioRecorder.py  example_script.txt  example_static_script.txt  jibo_animation_ui.py  jibo_lookat_ui.py  jibo_speech_ui.py  jibo_teleop.py  jibo_teleop_config.json  jibo_teleop_flags.py  jibo_teleop_ros.py  jibo_volume_ui.py  opal_tablet_ui.py  tega_fidget_ui.py  tega_speech_ui.py  tega_teleop.py  tega_teleop_config.example.json  tega_teleop_flags.py  tega_teleop_ros.py  tega_volume_ui.py
src/GFTA_scripts/: convert_gfta_scripts_json.py  narrative_script.txt  sis_script.txt  siw_script.txt  static_script.txt  static_script_fun.txt
static_scripts/: example_static_script.json  gfta_static_script.json  gfta_static_script_fun.json  static_script_fun.json
teleop_scripts/: example_script.json  gfta_narrative_script.json  gfta_sis_script.json  siw_script.json
