<?xml version="1.0"?>
<package>
  <name>jibo_msgs</name>
  <version>2.0.0</version>
  <description>An interface to remotely teleoperate the Jibo robot and custom action messages for Jibo robot communication</description>

  <maintainer email="samuelsp@media.mit.edu">samuelsp</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/mitmedialab/jibo-teleop</url>
  <author email="samuelsp@media.mit.edu">samuelsp</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
